network/istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: network
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    hosts:
    - "*.${INFRA_DOMAIN}"
    tls:
      mode: Terminate
      certificateRefs:
      - name: domain-tls-secret
    allowedRoutes:
      namespaces:
        from: All
